# lsetwatch-csv

./: Makefile  README.md  pyproject.toml
src/lsetwatch_csv/: lsetwatch.py  test_lsetwatch.py
